added text to footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
     <section id="ourProducts">
         <h2>Galleries</h2>
-        <p>Click on an image to view a Gallery</p>
+        <p>Click on an image to navigate to a Gallery</p>
         <div id="products">
             <article>
                 <h3>Sports</h3>
@@ -45,7 +45,7 @@
     <section id="aboutUs">
         <h2>About Us</h2>
         <img src="images/Chippewa-Lake-inlet.jpg" alt="image">
-        <p id="leftText">
+        <p id="aboutText">
             Offal adaptogen gluten-free post-ironic meditation PBR&B. Live-edge quinoa slow-carb kickstarter kale chips, forage shabby chic godard gastropub blue bottle post-ironic raclette brunch vegan. Shoreditch tbh direct trade, cloud bread synth locavore drinking vinegar jean shorts. Biodiesel chartreuse blue bottle, everyday carry man braid taxidermy post-ironic VHS. Cardigan hella fixie, street art retro air plant selfies polaroid kitsch stumptown cold-pressed ennui twee. Waistcoat stumptown kickstarter letterpress chia XOXO activated charcoal direct trade. Gochujang microdosing small batch, hoodie meditation chambray +1 butcher cray kickstarter iceland heirloom franzen biodiesel farm-to-table.
         </p>
     </section>
@@ -66,8 +66,9 @@
         <a href="#contact">Contact Us</a>
     </nav>
     <footer>
-        <a href="#header">Back to Top</a>
+        <span>&copy;2020 Northeast Ohio Photography</span>
         <img src="images/GermanAmerican.png">
+        <a href="#header">Back to Top</a>
     </footer>
 </body>
 </html>
